# seis-nilsLenaerts

./: .gitignore  01-wasm-vm.md  404.html  CMakeLists.txt  _config.yml  index.html  index.md  index.xml  sitemap.xml  submission.txt
.github/workflows/: gh-pages.yml
about/: index.html
blog/: config.toml
blog/content/en/: _index.md
blog/content/en/post/: Compiler.md
categories/: index.html  index.xml
contact/: index.html
post/: index.html  index.xml
post/chapter-1/: index.html
post/chapter-2/: index.html
post/chapter-3/: index.html
post/chapter-4/: index.html
post/chapter-5/: index.html
post/chapter-6/: index.html
post/compiler/: index.html
post/page/1/: index.html
post/page/2/: index.html
src/: bytestream.cpp  bytestream.h  constants.h  instruction.h  instructions.h  lexer.cpp  lexer.h  parser.cpp  parser.h  stack.cpp  stack.h  token.h  variableType.h  vm.cpp  vm.h
tags/: index.html  index.xml
tags/scene/: index.html  index.xml
tests/: hex_number_generator.py  main.cpp
tests/bytestreamTest/: Makefile  README.MD  main.cpp  string.txt
tests/compilerTest/: Makefile  main.cpp  test.wat
tests/lexerTest/: Makefile  main.cpp  test.wat
